--- a/config/cradio.conf
+++ b/config/cradio.conf
@@ -1,7 +1,7 @@
 # Bluetooth
 CONFIG_BT_MAX_CONN=5
 CONFIG_BT_MAX_PAIRED=5
-CONFIG_BT_CTLR_TX_PWR_PLUS_8
+CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 # Battery
 CONFIG_ZMK_BATTERY_REPORTING=y
 CONFIG_ZMK_BATTERY_REPORT_INTERVAL=180
@@ -15,7 +15,7 @@ CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=900000
 CONFIG_ZMK_MOUSE=y
 
 # REPORT
-CONFIG_ZMK_BEHAVIORS_QUEUE_SIZE=512
+#CONFIG_ZMK_BEHAVIORS_QUEUE_SIZE=512
 # CONFIG_ZMK_SEND_STRING_DEFAULT_WAIT_MS=10
 # CONFIG_ZMK_SEND_STRING_DEFAULT_TAP_MS=10
 
